--- a/hubble-playground/src/index.css
+++ b/hubble-playground/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#overlay {
+  position: fixed; /* Sit on top of the page content */
+  width: 70%; /* Full width (cover the whole page) */
+  height: 70%; /* Full height (cover the whole page) */
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.8); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer; /* Add a pointer on hover */
+}
